# cs311-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: collections.py  paper.py  query.py
app/core/: config.py  heuristic_config.py
app/db/: session.py
app/models/: chat_log.py  collection.py  paper.py  query_log.py
app/repositories/: base.py  chat_log.py  collection.py  paper.py  query_log.py
app/schemas/: axis.py  collection.py  ingest.py  paper.py  query.py
app/services/: collection_service.py  decompose_service.py  embedding_service.py  ingest_service.py  llm_service.py  paper_service.py  prompt_service.py  rag_service.py  retrieval_graph.py  search_service.py  test_service.py
app/vector_store/: faiss_store_manager.py  pinecone_store_manager.py
notebooks/faiss_index/: index.faiss  index.pkl
prompts/: analyze_topic.txt  decompose.txt  decompose_query.txt  evaluate_query.txt  retrieval_generate_answer.txt  retrieval_generate_vague.txt  retrieval_query_decompose.txt  retrieval_query_enhance.txt  retrieval_query_evaluate.txt  retrieval_query_evaluation.txt  retrieval_query_rewrite.txt  retrieval_query_translation.txt
