[project]
name = "academic-system-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "pymupdf>=1.26.7",
    "typing>=3.10.0.0",
    "requests",
    "feedparser",
    "fastmcp",
    "PyPDF2>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0", # Better HTML parser for BeautifulSoup
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "pdfplumber>=0.11.8",
    "fastapi>=0.127.0",
    "sqlalchemy>=2.0.45",
    "langchain-pinecone>=0.2.13",
    "pypdf>=6.5.0",
    "ddgs>=9.10.0",
    "sentence-transformers>=5.2.0",
    "langchain-google-genai>=4.1.2",
    "langchain>=1.2.0",
    "huggingface-hub>=0.25.0",
    "importlib-metadata>=8.5.0",
    "ipywidgets>=8.1.8",
    "langchain-google-community>=3.0.2",
    "pandas>=2.3.3",
    "onnx>=1.20.1",
    "langchain-unstructured>=1.0.1",
    "unstructured-client>=0.42.6",
    "unstructured[pdf]>=0.18.26",
    "python-magic>=0.4.27",
    "langchain-docling>=2.0.0",
    "langgraph-checkpoint-sqlite>=3.0.2",
    "ragas>=0.4.3",
    "datasets>=4.4.2",
]
